syntax = "proto3";

package inventory;
option go_package = "inventory-service/proto;inventorypb";

service InventoryService {
  rpc GetStock(StockRequest) returns (StockResponse);
  rpc UpdateStockOnOrder(StockUpdateRequest) returns (GenericResponse);
  rpc Restock(StockUpdateRequest) returns (GenericResponse);
  rpc ListLowStock(LowStockRequest) returns (LowStockList);
}

message StockRequest {
  string product_id = 1;
  string size = 2;
  string color = 3;
}

message StockUpdateRequest {
  string sku_id = 1;
  int32 quantity_change = 2;
}

message StockResponse {
  string sku_id = 1;
  string product_id = 2;
  string size = 3;
  string color = 4;
  int32 quantity = 5;
}

message LowStockRequest {
  int32 threshold = 1;
}

message LowStockList {
  repeated StockResponse items = 1;
}

message GenericResponse {
  string message = 1;
}
